[package]
name = "parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive", "regex"] }
serde = { version = "1.0.136", features = ["derive"] }
csv = "1.1.6"
log = "0.4.16"
log4rs = "1.1.1"

[profile.release]
opt-level = 3
debug = true
# Performs "fat" LTO which attempts to perform optimizations across all crates within the dependency graph.
lto = true
