[package]
name = "parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive", "regex"] }
serde = { version = "1.0.136", features = ["derive"] }
csv = "1.1.6"
crossbeam-channel = "0.5.4"
chrono = "0.4.19"
rust_decimal = { version = "1.23.1", features = ["serde-with-str"] }
sled = "0.34.7"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug = true
lto = true
